Overhaul all components with production-quality, deeply structured content
Replace generic/sample-quality content across the entire registry with
opinionated, checklist-driven components inspired by gstack.

Common skills (loaded for all projects):
- /review: two-pass code review (critical → informational) with file:line output
- /ship: automated release pipeline with stack-aware test detection
- /plan: architecture review with product + engineering modes (NEW)
- /retro: engineering retrospective from git history with metrics (NEW)
- /qa: quality assurance with 8-category health scoring rubric

Common rules rewritten with concrete anti-patterns:
- clean-code: complexity thresholds, DRY vs WET, before/after examples
- security: OWASP Top 10 mapping, secrets detection regex, trust boundaries

Common agents:
- refactor: 12 named refactoring patterns with complexity targets
- debug: systematic reproduce → isolate → identify → fix → verify (NEW)

Common prompts rewritten:
- explain: 3 depth levels with ASCII diagrams and complexity analysis
- optimize: profiling-first methodology with 5 optimization categories

All 35 stack-specific components rewritten with idiomatic code examples,
concurrency/error handling patterns, and common pitfalls:
- Tier 1 (deepest): Swift, Rust, Go, Python, TypeScript, Java, Kotlin, Dart
- Tier 2 (solid): PHP, Ruby, C#, C++, Scala, Elixir, Zig
- Tier 3 (essential): Haskell, Clojure, OCaml, F#, R, Julia, Perl, Lua, Obj-C, Shell
- Frameworks: Flutter, React, Svelte, Vue, Angular, React Native
- DevOps: Terraform, Docker, Kubernetes, Ansible

91 files changed, +13,478 lines / -1,597 lines